--- a/src/Navbar/navbar.css
+++ b/src/Navbar/navbar.css
@@ -1,76 +1,89 @@
 .navbar-container {
-    background-color: #121212;
-    height: 10rem;
+    position: fixed;
     display: flex;
     align-items: center;
-    justify-content: center;
-    font-size: 1.5rem;
-    position: sticky;
+    justify-content: space-between;
+    flex-direction: column;
+    background-color: #1d1d1d;
+    height: 100vh;
+    width: 20rem;
     top: 0;
+    left: 0;
     z-index: 1000;
-    height: 10rem;
-    width: 100%;
+}
+.navbar-top {
     display: flex;
-    justify-content: center;
     align-items: center;
-    margin-left: 15rem;
-    margin-top: .5rem;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    padding: 2rem 0;
 }
-.nav-logo {
-    position: absolute;
-    left: 15rem;
-    top: 2.8rem;
-    color: #ba0c0c;
-    font-size: 3.5rem;
-    letter-spacing: .1rem;
-    text-shadow: .25rem .25rem .25rem black;
-    cursor: pointer;
+.navbar-top img {
+    height: 10rem;
+    width: 10rem;
 }
-.nav-logo-img {
-    position: absolute;
-    left: 10.25rem;
-    top: 3rem;
-    width: 4rem;
-    height: 4rem;
-    padding-right: 1rem;
+.navbar-top h1 {
+    margin-top: 1rem;
+    font-size: 2.35rem;
+    color: white;
+}
+.navbar-top p {
+    margin-top: 1rem;
+    font-size: 1.25rem;
+    color: #a5a5a5;
+    text-align: center;
 }
 .nav-menu {
     display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     list-style: none;
     text-align: center;
-    margin-right: 2rem;
+    height: 100%;
+    width: 100%;
 }
 .nav-link {
-    color: #fff;
+    color: #909096;
     text-decoration: none;
 }
+#first-nav-link {
+    border-top: 1px solid #282828;
+}
+.nav-link h1 {
+    font-size: 2rem;
+    font-weight: 400;
+    line-height: 2.85;
+    border-bottom: 1px solid #282828;
+    transition: transform .1s ease;
+}
+.nav-link:hover {
+    color: #08fdd8;
+}
+.nav-link:active h1{
+    transform: scale(.95);
+}
 .nav-item {
-    padding: 1rem 2rem;
-    font-size: 1.15rem;
-    margin: 0 2.5rem;
-    line-height: 4rem;
-}
-.nav-item::after {
-    content: "";
-    display: block;
-    height: .3rem;
-    width: 0;
-    background-color: transparent;
-    transition: all .7s ease;
-}
-.nav-item:hover::after {
+    font-size: .75rem;
+    margin: 0 1rem;
+    line-height: 3.5rem;
     width: 100%;
-    background-color: #d82020;
 }
 .nav-item .active {
-    color: #d82020;
+    color: #08fdd8;
 }
-.account-btn {
-    position: absolute;
-    right: 16.5rem;
-    font-size: 3rem;
-    top: 3rem;
+.navbar-bottom {
+    margin: 2rem 0 5rem;
+    display: flex;
+    gap: 2rem;
 }
-.account-btn .active {
-    color: #d82020;
+.nav-icon {
+    font-size: 2.5rem;
+    color: #909096;
+    transition: all .25s ease;
+}
+.nav-icon:hover {
+    color: #08fdd8;
+    transform: scale(1.085);
 }
