about layout complete

--- a/src/1-About/about.css
+++ b/src/1-About/about.css
@@ -5,3 +5,30 @@
     padding-top: 5rem;
     text-align: center;
 }
+
+/* LEFT SIDE */
+.about-left-box {
+}
+.about-left-title {
+}
+.about-left-description {
+}
+.about-left-button-box {
+}
+.about-contact-button {
+}
+.about-resume-box {
+}
+.about-resume-pdf {
+}
+.about-resume-googleDocs {
+}
+
+
+/* RIGHT SIDE */
+.about-right-box {
+}
+.about-right-title {
+}
+.about-right-description {
+}
