--- a/src/Navbar/navbar.css
+++ b/src/Navbar/navbar.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: space-between;
     flex-direction: column;
-    background-color: #1d1d1d;
+    background-color: #181818;
     height: 100vh;
     width: 20rem;
     top: 0;
