--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
   /* border: 1px solid red; */
 }
+body {
+  color: #ffffff;
+  background-color: #1f1f1f;
+}
 html {
   font-size: 62.5%;
   font-family: 'Roboto', sans-serif;
