--- a/src/Navbar/navbar.css
+++ b/src/Navbar/navbar.css
@@ -65,10 +65,32 @@
     transform: scale(.95);
 }
 .nav-item {
+    position: relative;
     font-size: .75rem;
     margin: 0 1rem;
     line-height: 3.5rem;
     width: 100%;
+}
+.header-item::after {
+    content: "";
+    display: block;
+    height: .3rem;
+    width: 0;
+    background-color: transparent;
+    transition: all .7s ease;
+}
+.nav-item::after {
+    content: '';
+    position: absolute;
+    right: 0;
+    top: 0;
+    height: 0;
+    width: .25rem;
+    background-color: transparent;
+}
+.nav-item:hover::after {
+    height: 100%;
+    background-color: #08fdd8;
 }
 .nav-item .active {
     color: #08fdd8;
