added skills section html

--- a/src/1-About/about.css
+++ b/src/1-About/about.css
@@ -261,6 +261,12 @@
     font-size: 1.7rem;
     line-height: 1.5;
 }
+.about-right-description span {
+    text-decoration: underline;
+    font-weight: 500;
+    color: #08fdd8;
+    cursor: pointer;
+}
 .about-right-description:after {
     content: '<p/>';
     position: absolute;
